# OpenGL_Lean

./: .gitignore
demo01_glew_glfw/: CMakeLists.txt  main.cpp
demo02_usenuget/: CMakeLists.txt  main.cpp
demo03_hello_window/: CMakeLists.txt  main.cpp
demo04_Triangle/: CMakeLists.txt  main.cpp
demo04_Triangle/.cache/clangd/index/: main.cpp.9D74EF0319529ADA.idx
demo05_shader/: CMakeLists.txt  main.cpp
demo06_shader_color_interpolate/: CMakeLists.txt  main.cpp
demo06_shader_color_interpolate/.cache/clangd/index/: main.cpp.64B4109438DBB5D5.idx
demo07_shader_from_file/: CMakeLists.txt  fragment.frag  main.cpp  shader.cpp
demo08_textures/: CMakeLists.txt  fragment.frag  main.cpp  shader.h  vertex.frag
demo09_more_textures/: CMakeLists.txt  fragment.frag  main.cpp  stbTest.cpp
